--- a/MicroBrewerySolution/MicroBreweryLibrary/App.config
+++ b/MicroBrewerySolution/MicroBreweryLibrary/App.config
@@ -9,6 +9,7 @@
   </startup>
   <connectionStrings>
     <add name="MicroBreweryDatabaseEntities" connectionString="metadata=res://*/MicroBreweryEntity.csdl|res://*/MicroBreweryEntity.ssdl|res://*/MicroBreweryEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\v11.0;initial catalog=MicroBreweryDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="MicroBreweryDBEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\v11.0;initial catalog=MicroBreweryDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
