--- a/MicroBrewerySolution/MicroBreweryLibrary/MicroBreweryLibrary.csproj
+++ b/MicroBrewerySolution/MicroBreweryLibrary/MicroBreweryLibrary.csproj
@@ -52,56 +52,56 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Beer.cs">
-      <DependentUpon>MicroBreweryEntity.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="BeerRating.cs">
-      <DependentUpon>MicroBreweryEntity.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Beertype.cs">
-      <DependentUpon>MicroBreweryEntity.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="CustomBeer.cs" />
     <Compile Include="MicroBrewery.cs">
-      <DependentUpon>MicroBreweryEntity.tt</DependentUpon>
-    </Compile>
-    <Compile Include="MicroBreweryEntity.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>MicroBreweryEntity.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="MicroBreweryEntity.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>MicroBreweryEntity.tt</DependentUpon>
-    </Compile>
-    <Compile Include="MicroBreweryEntity.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>MicroBreweryEntity.edmx</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="MicroBreweryRating.cs">
-      <DependentUpon>MicroBreweryEntity.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model1.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Model1.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model1.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <EntityDeploy Include="MicroBreweryEntity.edmx">
+    <EntityDeploy Include="Model1.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>MicroBreweryEntity.Designer.cs</LastGenOutput>
+      <LastGenOutput>Model1.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <None Include="MicroBreweryEntity.Context.tt">
+    <None Include="Model1.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>MicroBreweryEntity.edmx</DependentUpon>
-      <LastGenOutput>MicroBreweryEntity.Context.cs</LastGenOutput>
+      <DependentUpon>Model1.edmx</DependentUpon>
+      <LastGenOutput>Model1.Context.cs</LastGenOutput>
     </None>
-    <None Include="MicroBreweryEntity.edmx.diagram">
-      <DependentUpon>MicroBreweryEntity.edmx</DependentUpon>
+    <None Include="Model1.edmx.diagram">
+      <DependentUpon>Model1.edmx</DependentUpon>
     </None>
-    <None Include="MicroBreweryEntity.tt">
+    <None Include="Model1.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>MicroBreweryEntity.edmx</DependentUpon>
-      <LastGenOutput>MicroBreweryEntity.cs</LastGenOutput>
+      <DependentUpon>Model1.edmx</DependentUpon>
+      <LastGenOutput>Model1.cs</LastGenOutput>
     </None>
     <None Include="packages.config" />
   </ItemGroup>
