--- a/MicroBrewerySolution/Repositories/Repositories.csproj
+++ b/MicroBrewerySolution/Repositories/Repositories.csproj
@@ -49,6 +49,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\MicroBreweryLibrary\MicroBreweryLibrary.csproj">
       <Project>{845627e8-6cf7-43c5-a98d-856446d810dc}</Project>
       <Name>MicroBreweryLibrary</Name>
