--- a/MicroBrewerySolution/Test/App.config
+++ b/MicroBrewerySolution/Test/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+  <connectionStrings>
+    <add name="MicroBreweryDatabaseEntities" connectionString="metadata=res://*/MicroBreweryEntity.csdl|res://*/MicroBreweryEntity.ssdl|res://*/MicroBreweryEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\v11.0;initial catalog=MicroBreweryDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
